<resources>
    <string name="app_name">MyNewApp</string>
    <string name="login">Login</string>
    <string name="main_menu">Converter</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="click_here">Don"'"t have an account? Click here</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="currency">Currency</string>
    <string name="temp">Temperature</string>
    <string name="length">Length</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="weight">Weight</string>
    <string name="convert">Convert</string>
</resources>