<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MenuActivity">

    <TextView
        android:id="@+id/tv_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="80dp"
        android:text="@string/main_menu"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/currency"
        android:drawableEnd="@drawable/ic_currency"
        android:drawableTint="@color/md_theme_onPrimary"
        android:gravity="center|start"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_title" />

    <Button
        android:id="@+id/btn_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/temp"
        android:drawableEnd="@drawable/ic_temperature"
        android:drawableTint="@color/md_theme_onPrimary"
        android:gravity="center|start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_currency" />

    <Button
        android:id="@+id/btn_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/length"
        android:drawableEnd="@drawable/ic_weight"
        android:drawableTint="@color/md_theme_onPrimary"
        android:gravity="center|start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_temp" />

    <Button
        android:id="@+id/btn_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/weight"
        android:drawableEnd="@drawable/ic_weight"
        android:drawableTint="@color/md_theme_onPrimary"
        android:gravity="center|start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_length" />

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="80dp"
        android:text="@string/log_out"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>